[package]
name = "gh-action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.34.0", features = ["suggestions", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dialoguer = "0.10.0"
indicatif = "0.16.2"